--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,10 @@
 			<version>${io.jsonwebtoken.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
